@@ -30,9 +30,12 @@ configurations {
 }
 
 def ballerinaJreLinuxZip = file("$buildDir/distributions/ballerina-jre-linux-64-${project.version}.zip")
+def ballerinaJreLinuxARMZip = file("$buildDir/distributions/ballerina-jre-linux-arm-64-${project.version}.zip")
 def ballerinaJreWindowsZip = file("$buildDir/distributions/ballerina-jre-windows-64-${project.version}.zip")
 def ballerinaJreMacOSZip = file("$buildDir/distributions/ballerina-jre-macos-64-${project.version}.zip")
 def ballerinaJreMacOSARMZip = file("$buildDir/distributions/ballerina-jre-macos-arm-64-${project.version}.zip")
+
+def targetedOSName = project.hasProperty('targetedOS') ? project.targetedOS : Os.isFamily(Os.FAMILY_MAC) ? "mac" : Os.isFamily(Os.FAMILY_UNIX) ? "linux" : "windows"
 
 task getModuleList {
     // Reads default modules included in AdoptOpenJre 17
@@ -48,6 +51,13 @@ task getModuleList {
 task downloadJdkforLinux(type: Download) {
     src project.linuxJdkUrl
     dest new File("$buildDir/temp/downloads/", "jdk-linux.tar.gz")
+    overwrite false
+    onlyIfModified true
+}
+
+task downloadJdkforLinuxARM(type: Download) {
+    src project.linuxARMJdkUrl
+    dest new File("$buildDir/temp/downloads/", "jdk-linux-arm.tar.gz")
     overwrite false
     onlyIfModified true
 }
@@ -79,6 +89,12 @@ task extractJdkForLinux(type: Copy, dependsOn: downloadJdkforLinux) {
     includeEmptyDirs = false
 }
 
+task extractJdkForLinuxARM(type: Copy, dependsOn: downloadJdkforLinuxARM) {
+    from tarTree(downloadJdkforLinuxARM.dest)
+    into "$buildDir/temp/extracted/jdk-linux-arm"
+    includeEmptyDirs = false
+}
+
 task extractJdkForWindows(type: Copy, dependsOn: downloadJdkforWindows) {
     from zipTree(downloadJdkforWindows.dest)
     into "$buildDir/temp/extracted/jdk-windows"
@@ -103,6 +119,14 @@ task assembleJreForLinux(type: Exec, dependsOn: extractJdkForLinux) {
             '--module-path', "$buildDir/temp/extracted/jdk-linux/jdk-${project.jdkVersion}/jmods",
             '--add-modules', jdkModules,
             '--output', "$buildDir/temp/generated/ballerina-jre-linux-64/jdk-${project.jdkVersion}-jre"
+}
+
+task assembleJreForLinuxARM(type: Exec, dependsOn: extractJdkForLinuxARM) {
+    workingDir "$buildDir/temp/extracted/jdk-linux-arm/jdk-${project.jdkVersion}/bin"
+    commandLine "$buildDir/temp/extracted/jdk-linux-arm/jdk-${project.jdkVersion}/bin/jlink",
+            '--module-path', "$buildDir/temp/extracted/jdk-linux-arm/jdk-${project.jdkVersion}/jmods",
+            '--add-modules', jdkModules,
+            '--output', "$buildDir/temp/generated/ballerina-jre-linux-arm-64/jdk-${project.jdkVersion}-jre"
 }
 
 task assembleJreForWindows(type: Exec, dependsOn: extractJdkForWindows) {
@@ -136,6 +160,13 @@ task packageJreForLinux(type: Zip, dependsOn: assembleJreForLinux) {
     outputs.file ballerinaJreLinuxZip
 }
 
+task packageJreForLinuxARM(type: Zip, dependsOn: assembleJreForLinuxARM) {
+    from fileTree("$buildDir/temp/generated/ballerina-jre-linux-arm-64/")
+    archiveName "ballerina-jre-linux-arm-64-${project.version}.zip"
+    destinationDirectory = file("$buildDir/distributions/")
+    outputs.file ballerinaJreLinuxARMZip
+}
+
 task packageJreForWindows(type: Zip, dependsOn: assembleJreForWindows) {
     from fileTree("$buildDir/temp/generated/ballerina-jre-windows-64/")
     archiveName "ballerina-jre-windows-64-${project.version}.zip"
@@ -163,18 +194,24 @@ if (moduleVersion.indexOf('-') != -1) {
 }
 
 task build {
-    if (Os.isFamily(Os.FAMILY_MAC)) {
+    println("Building for Operating System: " + targetedOSName)
+
+    if (targetedOSName == Os.FAMILY_MAC || targetedOSName == "macos") {
         dependsOn packageJreForMac
-//        dependsOn packageJreForMacARM
-    } else if (Os.isFamily(Os.FAMILY_UNIX)) {
+    } else if (targetedOSName == "macos-arm") {
+        dependsOn packageJreForMacARM
+    } else if (targetedOSName == Os.FAMILY_UNIX || targetedOSName == "linux") {
         dependsOn packageJreForLinux
-    } else if (Os.isFamily(Os.FAMILY_WINDOWS)) {
+    } else if (targetedOSName == "linux-arm") {
+        dependsOn packageJreForLinuxARM
+    } else if (targetedOSName == Os.FAMILY_WINDOWS || targetedOSName == "windows") {
         dependsOn packageJreForWindows
     }
 }
 
 artifacts {
     zip file: ballerinaJreLinuxZip, builtBy: packageJreForLinux
+    zip file: ballerinaJreLinuxARMZip, builtBy: packageJreForLinuxARM
     zip file: ballerinaJreWindowsZip, builtBy: packageJreForWindows
     zip file: ballerinaJreMacOSZip, builtBy: packageJreForMac
     zip file: ballerinaJreMacOSARMZip, builtBy: packageJreForMacARM
@@ -207,12 +244,14 @@ task cleanTemporaryFiles(type: Delete) {
 }
 
 assembleJreForLinux.dependsOn getModuleList
+assembleJreForLinuxARM.dependsOn getModuleList
 assembleJreForWindows.dependsOn getModuleList
 assembleJreForMac.dependsOn getModuleList
 assembleJreForMacARM.dependsOn getModuleList
 
 
 assembleJreForLinux.dependsOn cleanGeneratedFiles
+assembleJreForLinuxARM.dependsOn cleanGeneratedFiles
 assembleJreForWindows.dependsOn cleanGeneratedFiles
 assembleJreForMac.dependsOn cleanGeneratedFiles
 assembleJreForMacARM.dependsOn cleanGeneratedFiles
